--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PORT
-TWILIO_ACCOUNT_SID
-TWILIO_AUTH_TOKEN
-OEC_APPLICATION_PHONE_NUMBER
-OEC_CEO_PHONE_NUMBER
+PORT=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+APPLICATION_PHONE_NUMBER=
+ADMIN_PHONE_NUMBER=
+PROJECTID=
