--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A service that compresses an images and store it in a Google Cloud Storage Bucket and then an SMS to Web Admin",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Paul Nnaji",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^7.15.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
